Add animation between pages, and an (almost empty) page to create boulders

--- a/www/index.html
+++ b/www/index.html
@@ -12,8 +12,9 @@
     </head>
     <body>
         <div class="app" id="mountpoint">
-
+            
         </div>
+        <div id="animation" class="removed"></div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/doT.js"></script>
         <script type="text/javascript" src="js/all.js"></script>
