Add a left sidebar, and working upload

--- a/www/index.html
+++ b/www/index.html
@@ -7,15 +7,20 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
         <link rel="stylesheet" href="css/bulma.min.css">
+        <link rel="stylesheet" href="css/sidebarjs.min.css">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <title>Hello World</title>
     </head>
     <body>
+        <div id="IndexNavContainer">
+
+        </div>
         <div class="app" id="mountpoint">
             
         </div>
         <div id="animation" class="removed"></div>
         <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/sidebarjs.js"></script>
         <script type="text/javascript" src="js/doT.js"></script>
         <script type="text/javascript" src="js/all.js"></script>
     </body>
